--- a/.devcontainer/cuda11.8-pip/devcontainer.json
+++ b/.devcontainer/cuda11.8-pip/devcontainer.json
@@ -7,8 +7,7 @@
     "args": {
       "CUDA": "11.8",
       "PYTHON_PACKAGE_MANAGER": "pip",
-      "CONDA_BASE": "rapidsai/devcontainers:23.10-cpp-llvm16-cuda11.8-mambaforge-ubuntu22.04",
-      "PIP_BASE": "rapidsai/devcontainers:23.10-cpp-llvm16-cuda11.8-ubuntu22.04"
+      "BASE": "rapidsai/devcontainers:23.10-cpp-llvm16-cuda11.8-ubuntu22.04"
     }
   },
   "hostRequirements": {
@@ -16,11 +15,11 @@
   },
 
   "features": {
-    "./features/rapids-build-utils": {}
+    "ghcr.io/rapidsai/devcontainers/features/rapids-build-utils:23.10": {}
   },
 
   "overrideFeatureInstallOrder": [
-    "./features/rapids-build-utils"
+    "ghcr.io/rapidsai/devcontainers/features/rapids-build-utils"
   ],
 
   "initializeCommand": [
@@ -33,12 +32,11 @@
     "mkdir -m 0755 -p ~/.config/clangd && cp -n /etc/skel/.config/clangd/config.yaml ~/.config/clangd/config.yaml"
   ],
 
-  "containerEnv": {
-    "PYTHONSAFEPATH": "true",
-    "PYTHONUNBUFFERED": "true",
-    "DEFAULT_VIRTUAL_ENV": "legate",
-    "PROJECT_MANIFEST_YML": "/home/coder/devcontainers/.devcontainer/manifest.yaml"
-  },
+  "postAttachCommand": [
+    "/bin/bash",
+    "-c",
+    "if [ ${CODESPACES:-false} = 'true' ]; then . devcontainer-utils-post-attach-command; . rapids-post-attach-command; fi"
+  ],
 
   "workspaceFolder": "/home/coder",
   "workspaceMount": "source=${localWorkspaceFolder},target=/home/coder/${localWorkspaceFolderBasename},type=bind,consistency=consistent",
@@ -49,54 +47,16 @@
     "source=${localWorkspaceFolder}/../.aws,target=/home/coder/.aws,type=bind,consistency=consistent",
     "source=${localWorkspaceFolder}/../.cache,target=/home/coder/.cache,type=bind,consistency=consistent",
     "source=${localWorkspaceFolder}/../.config,target=/home/coder/.config,type=bind,consistency=consistent",
-    "source=${localWorkspaceFolder}/../.local/${localWorkspaceFolderBasename},target=/home/coder/.local,type=bind,consistency=consistent",
-    "source=${localWorkspaceFolder}/.devcontainer/cuda11.8-pip/features/rapids-build-utils/opt/rapids-build-utils,target=/opt/rapids-build-utils,type=bind,consistency=consistent"
+    "source=${localWorkspaceFolder}/../.local/${localWorkspaceFolderBasename},target=/home/coder/.local,type=bind,consistency=consistent"
   ],
 
   "customizations": {
     "vscode": {
       "extensions": [
-        "llvm-vs-code-extensions.vscode-clangd",
-        "mutantdino.resourcemonitor",
-        "ms-vscode.cpptools",
-        "nvidia.nsight-vscode-edition",
-        "seaube.clangformat",
-        "tamasfe.even-better-toml"
-      ],
-      "settings": {
-        "C_Cpp.vcpkg.enabled": false,
-        "C_Cpp.formatting": "disabled",
-        "C_Cpp.autocomplete": "disabled",
-        "C_Cpp.errorSquiggles": "disabled",
-        "C_Cpp.intelliSenseEngine": "disabled",
-        "C_Cpp.configurationWarnings": "disabled",
-        "C_Cpp.autoAddFileAssociations": false,
-        "clang-format.fallbackStyle": "none",
-        "files.trimFinalNewlines": true,
-        "files.insertFinalNewline": true,
-        "files.trimTrailingWhitespace": true,
-        "files.associations": {
-          "*.cu": "cuda-cpp",
-          "*.cuh": "cuda-cpp",
-          "**/libcudacxx/include/**/*": "cpp",
-          "**/libcudacxx-src/include/**/*": "cpp"
-        },
-        "files.watcherExclude": {
-          "**/build/**": true,
-          "**/_skbuild/**": true,
-          "**/target/**": true
-        },
-        "python.linting.flake8Enabled": true,
-        "[c]": {
-          "editor.defaultFormatter": "seaube.clangformat"
-        },
-        "[cpp]": {
-          "editor.defaultFormatter": "seaube.clangformat"
-        },
-        "[cuda-cpp]": {
-          "editor.defaultFormatter": "seaube.clangformat"
-        }
-      }
+        "ms-python.flake8",
+        "ms-python.python",
+        "nvidia.nsight-vscode-edition"
+      ]
     }
   }
 }
