--- a/.devcontainer/cuda11.8-conda/devcontainer.json
+++ b/.devcontainer/cuda11.8-conda/devcontainer.json
@@ -1,6 +1,4 @@
 {
-  "shutdownAction": "stopContainer",
-
   "build": {
     "context": "${localWorkspaceFolder}/.devcontainer",
     "dockerfile": "${localWorkspaceFolder}/.devcontainer/Dockerfile",
@@ -10,34 +8,15 @@
       "BASE": "rapidsai/devcontainers:23.10-cpp-cuda11.8-mambaforge-ubuntu22.04"
     }
   },
-  "hostRequirements": {
-    "gpu": true
-  },
-
+  "hostRequirements": {"gpu": "optional"},
   "features": {
     "ghcr.io/rapidsai/devcontainers/features/rapids-build-utils:23.10": {}
   },
-
   "overrideFeatureInstallOrder": [
     "ghcr.io/rapidsai/devcontainers/features/rapids-build-utils"
   ],
-
-  "initializeCommand": [
-    "/bin/bash", "-c", "mkdir -m 0755 -p ${localWorkspaceFolder}/../.{aws,cache,config/pip,conda/pkgs} ${localWorkspaceFolder}/../.{conda,local}/${localWorkspaceFolderBasename} ${localWorkspaceFolder}/../{.local/state,legion,legate.core,cunumeric}"
-  ],
-
-  "updateContentCommand": [
-    "/bin/bash",
-    "-c",
-    "mkdir -m 0755 -p ~/.config/clangd && cp -n /etc/skel/.config/clangd/config.yaml ~/.config/clangd/config.yaml"
-  ],
-
-  "postAttachCommand": [
-    "/bin/bash",
-    "-c",
-    "if [ ${CODESPACES:-false} = 'true' ]; then . devcontainer-utils-post-attach-command; . rapids-post-attach-command; fi"
-  ],
-
+  "initializeCommand": ["/bin/bash", "-c", "mkdir -m 0755 -p ${localWorkspaceFolder}/../.{aws,cache,config/pip,conda/pkgs} ${localWorkspaceFolder}/../.{conda,local}/${localWorkspaceFolderBasename} ${localWorkspaceFolder}/../{.local/state,legion,legate.core,cunumeric}"],
+  "postAttachCommand": ["/bin/bash", "-c", "if [ ${CODESPACES:-false} = 'true' ]; then . devcontainer-utils-post-attach-command; . rapids-post-attach-command; fi"],
   "workspaceFolder": "/home/coder",
   "workspaceMount": "source=${localWorkspaceFolder},target=/home/coder/${localWorkspaceFolderBasename},type=bind,consistency=consistent",
   "mounts": [
@@ -51,7 +30,6 @@
     "source=${localWorkspaceFolder}/../.conda/${localWorkspaceFolderBasename},target=/home/coder/.conda/envs,type=bind,consistency=consistent",
     "source=${localWorkspaceFolder}/../.local/state,target=/home/coder/.local/state,type=bind,consistency=consistent"
   ],
-
   "customizations": {
     "vscode": {
       "extensions": [
